ブログ記事の出力先を blog ではなく post ディレクトリにする
いくつかHugoのブログ向けテーマを試してみたところ、ブログの記事は
content/post に配置するのが前提のものが多かった。
ということで ox-hugo の出力先をそこに変更しました。

--- a/content-org/content.org
+++ b/content-org/content.org
@@ -3,7 +3,7 @@
 
 * blog
 :PROPERTIES:
-:EXPORT_HUGO_SECTION: blog
+:EXPORT_HUGO_SECTION: post
 :END:
 ** キーボード配置を変更する。変態的に。Ubuntu 編          :Ubuntu:mayu:Emacs:
 :PROPERTIES:
