moreマクロを定義する
Octopressと同様にhugoも
<!-- more -->
と書けば要約位置を制御できるとのこと。なので元々使ってたマクロが
そのまま使えた。

ref. https://gohugo.io/content-management/summaries/#manual-summary-splitting

--- a/content-org/content.org
+++ b/content-org/content.org
@@ -1,4 +1,5 @@
 #+HUGO_BASE_DIR: ../
+#+MACRO: more @@html:<!-- more -->@@
 
 * blog
 :PROPERTIES:
@@ -15,7 +16,7 @@
 
 Windows ではキーボード配置を変更するのに，のどかというアプリケーションを使いましたが，Ubuntu では窓使いの憂鬱を Linux に移植した mayu を使用することにします．
 
-# {{{more}}}
+{{{more}}}
 *** mayu
 窓使いの憂鬱はもともと，UNIX 系から Windows に転職した際に，UNIX 系の操作体系を再現するためのアプリケーションだったはずなのに，今度は Linux 系への逆移植がされて mayu というアプリケーションが開発されるという面白い状態になっています．設定の仕方などは窓使いの憂鬱，のどかとかわらないのがいいですね．
 
